adding translation dicts

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,50 +2,256 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['..\\\\data\\\\tsv\\\\sdg_08_40.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\t2020_10.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm010.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm011.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm012.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm020.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm021.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\teilm022.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tepsr_wc120.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tgs00007.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tgs00010.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tgs00053.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tgs00102.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00066.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00070.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00071.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00073.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00074.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00159.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00181.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00182.tsv',\n",
-       " '..\\\\data\\\\tsv\\\\tps00203.tsv']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "\n",
     "def list_tsv():\n",
     "    \"\"\"Return list of tsv files\"\"\"\n",
     "    base = os.path.join(os.pardir, \"data\")\n",
     "    return [os.path.join(base, \"tsv\", x) \n",
-    "            for x in os.listdir(os.path.join(base, \"tsv\"))]\n",
-    "list_tsv()"
+    "            for x in os.listdir(os.path.join(base, \"tsv\"))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../lfsa_pganws.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit,sex,citizen,age,wstatus,geo\\time</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>1998</th>\n",
+       "      <th>1997</th>\n",
+       "      <th>1996</th>\n",
+       "      <th>1995</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>THS,F,EU15_FOR,Y15-19,ACT,AT</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>...</td>\n",
+       "      <td>: bc</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>THS,F,EU15_FOR,Y15-19,ACT,BE</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: bu</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: bu</td>\n",
+       "      <td>...</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: bc</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>THS,F,EU15_FOR,Y15-19,ACT,CH</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>7.5 u</td>\n",
+       "      <td>9.6 u</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>8.1 u</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>THS,F,EU15_FOR,Y15-19,ACT,CY</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>...</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>THS,F,EU15_FOR,Y15-19,ACT,CZ</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  unit,sex,citizen,age,wstatus,geo\\time  2019   2018   2017  2016  2015   \\\n",
+       "0          THS,F,EU15_FOR,Y15-19,ACT,AT    : u    : u    : u   : u   : u   \n",
+       "1          THS,F,EU15_FOR,Y15-19,ACT,BE    : u    : u   : bu   : u   : u   \n",
+       "2          THS,F,EU15_FOR,Y15-19,ACT,CH  10.0   11.7   11.0   9.9   9.5    \n",
+       "3          THS,F,EU15_FOR,Y15-19,ACT,CY    : c    : u    : u   : u   : u   \n",
+       "4          THS,F,EU15_FOR,Y15-19,ACT,CZ     :      :      :     :     :    \n",
+       "\n",
+       "  2014  2013  2012   2011   ... 2004  2003  2002   2001   2000   1999   1998   \\\n",
+       "0   : u   : u   : u    : u  ...  : bc   : c   : c    : u    : c     :     : c   \n",
+       "1   : u   : u   : u   : bu  ...   : c   : c   : c     :     : c   : bc    : u   \n",
+       "2  8.1   9.0   9.0   10.7   ...  8.2   8.1   7.7   7.5 u  9.6 u  11.6   12.9    \n",
+       "3   : u   : u   : u    : u  ...   : u   : u   : u    : u    : u    : c     :    \n",
+       "4    :     :     :      :   ...    :     :     :      :      :      :      :    \n",
+       "\n",
+       "   1997   1996  1995   \n",
+       "0    : c    : u   : c  \n",
+       "1    : u    : u   : u  \n",
+       "2  12.5   8.1 u    :   \n",
+       "3     :      :     :   \n",
+       "4     :      :     :   \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(175604, 26)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
