--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -256,6 +256,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit,sex,citizen,age,wstatus,geo\\time</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>1998</th>\n",
+       "      <th>1997</th>\n",
+       "      <th>1996</th>\n",
+       "      <th>1995</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>THS,F,EU15_FOR,Y25-59,ACT,RO</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>THS,F,EU15_FOR,Y25-59,ACT,RS</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: bc</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>THS,F,EU15_FOR,Y25-59,ACT,SE</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>35.4 b</td>\n",
+       "      <td>40.9</td>\n",
+       "      <td>40.1</td>\n",
+       "      <td>39.4</td>\n",
+       "      <td>38.3</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>34.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41.8</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>37.9</td>\n",
+       "      <td>39.3 b</td>\n",
+       "      <td>47.9</td>\n",
+       "      <td>38.3</td>\n",
+       "      <td>37.9</td>\n",
+       "      <td>45.4</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003</th>\n",
+       "      <td>THS,F,EU15_FOR,Y25-59,ACT,SI</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>0.5 u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>0.6 u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: u</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>THS,F,EU15_FOR,Y25-59,ACT,SK</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>: c</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>: bc</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     unit,sex,citizen,age,wstatus,geo\\time  2019    2018   2017   2016   \\\n",
+       "2000          THS,F,EU15_FOR,Y25-59,ACT,RO     :       :      :     : c   \n",
+       "2001          THS,F,EU15_FOR,Y25-59,ACT,RS    : c     : c     :      :    \n",
+       "2002          THS,F,EU15_FOR,Y25-59,ACT,SE  35.6   35.4 b  40.9   40.1    \n",
+       "2003          THS,F,EU15_FOR,Y25-59,ACT,SI    : u   0.5 u    : u    : u   \n",
+       "2004          THS,F,EU15_FOR,Y25-59,ACT,SK    : c      :      :     : c   \n",
+       "\n",
+       "      2015   2014   2013   2012   2011   ...  2004   2003   2002    2001   \\\n",
+       "2000    : c     :      :      :      :   ...    : u     :      :       :    \n",
+       "2001     :    : bc    : c    : c     :   ...     :      :      :       :    \n",
+       "2002  39.4   38.3   35.5   31.4   34.3   ...  41.8   40.8   37.9   39.3 b   \n",
+       "2003    : u  0.6 u    : u    : u    : c  ...     :      :     : c      :    \n",
+       "2004    : c    : c     :      :      :   ...     :    : bc     :       :    \n",
+       "\n",
+       "      2000   1999   1998   1997  1996  1995   \n",
+       "2000     :      :      :      :     :     :   \n",
+       "2001     :      :      :      :     :     :   \n",
+       "2002  47.9   38.3   37.9   45.4     :     :   \n",
+       "2003     :      :      :      :     :     :   \n",
+       "2004     :      :      :      :     :     :   \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[2000:2005]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-8b983cd24644>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num = int(text)\n",
+    "except NameError:\n",
+    "    num = int(text.split()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
