--- a/notebooks/tinkering.ipynb
+++ b/notebooks/tinkering.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "def list_tsv():\n",
     "    \"\"\"Return list of tsv files\"\"\"\n",
@@ -18,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../lfsa_pganws.tsv\", sep=\"\\t\")"
+    "df = pd.read_csv(\"../data/tsv/lfsa_pganws.tsv\", sep=\"\\t\")"
    ]
   },
   {
@@ -232,6 +233,52 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unit,sex,citizen,age,wstatus,geo\\time         0\n",
+       "2019                                      56810\n",
+       "2018                                      55816\n",
+       "2017                                      55898\n",
+       "2016                                      55599\n",
+       "2015                                      55660\n",
+       "2014                                      56377\n",
+       "2013                                          0\n",
+       "2012                                          0\n",
+       "2011                                          0\n",
+       "2010                                      63014\n",
+       "2009                                          0\n",
+       "2008                                          0\n",
+       "2007                                          0\n",
+       "2006                                          0\n",
+       "2005                                          0\n",
+       "2004                                     115670\n",
+       "2003                                     116511\n",
+       "2002                                     116323\n",
+       "2001                                     123680\n",
+       "2000                                     124502\n",
+       "1999                                          0\n",
+       "1998                                          0\n",
+       "1997                                          0\n",
+       "1996                                          0\n",
+       "1995                                          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
    ]
   },
   {
@@ -465,26 +512,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'text' is not defined",
+     "data": {
+      "text/plain": [
+       "0           : u\n",
+       "1           : u\n",
+       "2         11.7 \n",
+       "3           : u\n",
+       "4            : \n",
+       "          ...  \n",
+       "175599       : \n",
+       "175600       : \n",
+       "175601       : \n",
+       "175602       : \n",
+       "175603       : \n",
+       "Name: 2018 , Length: 175604, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"2018 \"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a number, not 'list'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-8b983cd24644>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'text' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-a1a3ece375d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"2018 \"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\matrix\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    128\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mconverter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 129\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"cannot convert the series to {converter}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    130\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot convert the series to <class 'float'>",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-a1a3ece375d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"2018 \"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"2018 \"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'list'"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    num = int(text)\n",
-    "except NameError:\n",
-    "    num = int(text.split()[0])"
+    "    num = float(df[\"2018 \"])\n",
+    "except TypeError:\n",
+    "    num = float(df[\"2018 \"].str.split()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simplify_col(col):\n",
+    "    \"\"\"Return column as series with dtype float.\"\"\"\n",
+    "    \n",
+    "    def _split_str(x):\n",
+    "        x = x.split()\n",
+    "        return x[0] if isinstance(x, list) else x\n",
+    "    \n",
+    "    col = (np.where(col.str.contains(\":\"), \n",
+    "                        pd.NA, \n",
+    "                        col.apply(_split_str)))    \n",
+    "    return pd.to_numeric(col, errors=\"coerce\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a = df[df[\"2018 \"].notna()][\"2018 \"]\n",
+    "a = simplify_col(df[\"2010 \"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ nan,  nan, 10.4, ...,  nan,  nan,  nan])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns[1:]:\n",
+    "    df[col] = simplify_col(df[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "1         [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "2         [nan, 10.0, 11.7, 11.0, 9.9, 9.5, 8.1, 9.0, 9....\n",
+       "3         [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "4         [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "                                ...                        \n",
+       "175599    [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "175600    [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "175601    [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "175602    [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "175603    [nan, nan, nan, nan, nan, nan, nan, nan, nan, ...\n",
+       "Length: 175604, dtype: object"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(simplify_col, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unit,sex,citizen,age,wstatus,geo\\time         0\n",
+       "2019                                      56810\n",
+       "2018                                      55816\n",
+       "2017                                      55898\n",
+       "2016                                      55599\n",
+       "2015                                      55660\n",
+       "2014                                      56377\n",
+       "2013                                      57608\n",
+       "2012                                      59447\n",
+       "2011                                      61367\n",
+       "2010                                      63014\n",
+       "2009                                      65819\n",
+       "2008                                      66818\n",
+       "2007                                      68364\n",
+       "2006                                      69876\n",
+       "2005                                     112291\n",
+       "2004                                     115670\n",
+       "2003                                     116511\n",
+       "2002                                     116323\n",
+       "2001                                     123680\n",
+       "2000                                     124502\n",
+       "1999                                     129188\n",
+       "1998                                     132361\n",
+       "1997                                     137057\n",
+       "1996                                     142188\n",
+       "1995                                     146065\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
    ]
   },
   {
