fixed error conversion

--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,9 @@
     "\n",
     "def simplify_col(col):\n",
     "    \"\"\"Return column as series with dtype float.\"\"\"\n",
+    "    \n",
+    "    if df[\"2019M09 \"].dtype == \"float64\":\n",
+    "        return df\n",
     "    \n",
     "    def _split_str(x):\n",
     "        \"\"\"Split string on space and return numbers.\"\"\"\n",
@@ -62,7 +65,7 @@
     "    \n",
     "    # Save the variables as new columns\n",
     "    df[new_names] = df.iloc[:,0].str.split(\",\", expand=True) \n",
-    "    df = df[col_names + other_cols]\n",
+    "    df = df[new_names + other_cols]\n",
     "    \n",
     "    # Clean the column names\n",
     "    df.columns = [col.lower().strip() for col in df.columns]\n",
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teilm021.tsv\n",
+      "teilm022.tsv\n",
+      "tepsr_wc120.tsv\n",
+      "tps00203.tsv\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute the code and print results\n",
     "\n",
     "files = list_tsv()\n",
     "\n",
     "for filename in files:\n",
-    "    print(clean_df())"
+    "    print(clean_df(filename))"
    ]
   },
   {
