--- a/notebooks/main_j.ipynb
+++ b/notebooks/main_j.ipynb
@@ -1318,60 +1318,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       ":        57\n",
-       "0.8       3\n",
-       "11.3      3\n",
-       "1.0       2\n",
-       "1.3       2\n",
-       "3.5       2\n",
-       "0.4       2\n",
-       "1.2       2\n",
-       "1.5       2\n",
-       "3.4       2\n",
-       "2.3       2\n",
-       "5.5       2\n",
-       "0.9       2\n",
-       "0.3 u     1\n",
-       "3.0       1\n",
-       "6.4       1\n",
-       "3.1       1\n",
-       "3.7       1\n",
-       "12.6      1\n",
-       "2.7       1\n",
-       "11.9      1\n",
-       "7.2       1\n",
-       "2.1       1\n",
-       "5.9       1\n",
-       "3.3       1\n",
-       "2.9       1\n",
-       "3.8       1\n",
-       "8.1       1\n",
-       "4.5       1\n",
-       "13.2      1\n",
-       "10.8      1\n",
-       "5.2       1\n",
-       "2.6       1\n",
-       "3.6       1\n",
-       "4.0       1\n",
-       "1.7       1\n",
-       "9.2       1\n",
-       "6.1       1\n",
-       "1.9       1\n",
-       "4.2       1\n",
-       "2.5       1\n",
-       "7.8       1\n",
-       "9.1       1\n",
-       "3.2       1\n",
+       ":         57\n",
+       "11.3       3\n",
+       "3.4        2\n",
+       "0.9        2\n",
+       "0.8        2\n",
+       "1.5        2\n",
+       "0.4        2\n",
+       "1.3        2\n",
+       "7.2        1\n",
+       "3.1        1\n",
+       "2.7        1\n",
+       "2.5        1\n",
+       "2.1 b      1\n",
+       "3.5 b      1\n",
+       "5.9        1\n",
+       "1.2 b      1\n",
+       "12.6 b     1\n",
+       "3.6        1\n",
+       "5.5 b      1\n",
+       "3.0 b      1\n",
+       "2.9 b      1\n",
+       "3.5        1\n",
+       "2.3        1\n",
+       "0.8 b      1\n",
+       "9.2 b      1\n",
+       "3.7        1\n",
+       "2.6 b      1\n",
+       "9.1 b      1\n",
+       "5.2        1\n",
+       "1.7        1\n",
+       "10.8 b     1\n",
+       "7.8 b      1\n",
+       "1.2        1\n",
+       "11.9 b     1\n",
+       "4.0        1\n",
+       "1.0        1\n",
+       "13.2 b     1\n",
+       "4.5        1\n",
+       "6.1 b      1\n",
+       "4.2        1\n",
+       "3.3 b      1\n",
+       "0.3 u      1\n",
+       "1.9        1\n",
+       "2.3 b      1\n",
+       "1.0 b      1\n",
+       "8.1        1\n",
+       "3.8 b      1\n",
+       "5.5        1\n",
+       "3.2 b      1\n",
+       "6.4        1\n",
        "Name: 2001, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,29 +1388,353 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-14-d41912d02369>:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  ltubysex1['2002'] = pd.to_numeric(ltubysex1['2002'], errors='coerce')\n"
+     ]
+    }
+   ],
    "source": [
     "# Turn Years into numerics\n",
-    "ltubysex1['2002'] = pd.to_numeric(ltubysex1['2002'], errors='coerce').fillna(0)"
+    "ltubysex1['2002'] = pd.to_numeric(ltubysex1['2002'], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>indic_em</th>\n",
+       "      <th>Age_group</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Geo_time</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2004</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Y15-74</td>\n",
+       "      <td>PC_ACT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>AT</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.6 b</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Y15-74</td>\n",
+       "      <td>PC_ACT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.5 b</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3.2 b</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Y15-74</td>\n",
+       "      <td>PC_ACT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>BG</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>11.9 b</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.4 b</td>\n",
+       "      <td>5.5 b</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Y15-74</td>\n",
+       "      <td>PC_ACT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>CH</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.9 b</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Y15-74</td>\n",
+       "      <td>PC_ACT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>CY</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  indic_em Age_group    Unit Sex Geo_time  2000    2001  2002  2003   2004  \\\n",
+       "0      LTU    Y15-74  PC_ACT   F       AT    :       :    1.1  1.0   1.6 b   \n",
+       "1      LTU    Y15-74  PC_ACT   F       BE  4.7    3.5 b   4.3  4.2    4.7    \n",
+       "2      LTU    Y15-74  PC_ACT   F       BG  9.4   11.9 b  11.4  8.6    7.0    \n",
+       "3      LTU    Y15-74  PC_ACT   F       CH    :       :    NaN    :      :    \n",
+       "4      LTU    Y15-74  PC_ACT   F       CY    :       :    NaN    :      :    \n",
+       "\n",
+       "   ...   2010   2011  2012  2013  2014  2015  2016   2017  2018  2019  \n",
+       "0  ...   1.0    1.1   1.1   1.2   1.4   1.4   1.7    1.7   1.3   1.0   \n",
+       "1  ...   4.1    3.6   3.2   3.7   3.8   3.9   3.8   3.2 b  2.6   2.1   \n",
+       "2  ...  4.4 b  5.5 b  5.8   6.6   6.0   5.0   4.1    3.2   2.6   2.2   \n",
+       "3  ...  1.9 b   1.7   1.6   1.7   1.9   1.9   1.9    1.9   1.9   1.7   \n",
+       "4  ...   1.3    1.5   3.1   5.6   7.0   6.2   5.1    4.0   2.8   2.3   \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ltubysex1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def simplify_col(col):\n",
+    "    \"\"\"Return column as series with dtype float.\"\"\"\n",
+    "    \n",
+    "    def _split_str(x):\n",
+    "        x = x.split()\n",
+    "        return x[0] if isinstance(x, list) else x\n",
+    "    \n",
+    "    col = (np.where(col.str.contains(\":\"), \n",
+    "                        pd.NA, \n",
+    "                        col\n",
+    "                        .apply(_split_str)))    \n",
+    "    return pd.to_numeric(col, errors=\"coerce\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>11.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0\n",
+       "0     NaN\n",
+       "1     3.5\n",
+       "2    11.9\n",
+       "3     NaN\n",
+       "4     NaN\n",
+       "..    ...\n",
+       "109   1.0\n",
+       "110   3.7\n",
+       "111  11.3\n",
+       "112   NaN\n",
+       "113   1.3\n",
+       "\n",
+       "[114 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(simplify_col(ltubysex1['2001']))"
+   ]
   },
   {
    "cell_type": "code",
