Put cleaned files in a new folder

--- a/notebooks/cleaning_teilm021.ipynb
+++ b/notebooks/cleaning_teilm021.ipynb
@@ -635,15 +635,15 @@
       "text/plain": [
        "15.5     6\n",
        ":        4\n",
-       "11.9     3\n",
-       "19.4     3\n",
        "15.6     3\n",
+       "19.4     3\n",
+       "11.9     3\n",
        "        ..\n",
-       "22.8     1\n",
-       "7.2      1\n",
-       "24.9     1\n",
+       "19.8     1\n",
+       "6.0      1\n",
+       "11.1     1\n",
+       "6.8      1\n",
        "15.4     1\n",
-       "10.1     1\n",
        "Name: 2020M01, Length: 84, dtype: int64"
       ]
      },
@@ -862,11 +862,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "harmonized15_24_copy.to_csv('teilm021_cleaned.csv', index = False)"
+    "harmonized15_24_copy.to_csv('../data/cleaned/teilm021_cleaned.csv', index = False)"
    ]
   }
  ],
