--- a/notebooks/cleaning_teilm022.ipynb
+++ b/notebooks/cleaning_teilm022.ipynb
@@ -636,56 +636,56 @@
        "2.9      8\n",
        "5.4      6\n",
        "2.8      5\n",
-       "7.1      4\n",
-       "4.4      4\n",
-       "6.6      4\n",
+       "5.5      4\n",
        "5.1      4\n",
-       "3.7      4\n",
+       "7.1      4\n",
+       "6.6      4\n",
        "5.8      4\n",
        "2.4      4\n",
-       "5.5      4\n",
-       "4.1      3\n",
-       "5.7      3\n",
+       "3.7      4\n",
+       "4.4      4\n",
        "2.7      3\n",
+       "3.9      3\n",
+       "4.1      3\n",
        "6.1      3\n",
        ":        3\n",
-       "3.9      3\n",
+       "5.7      3\n",
        "2.5      2\n",
-       "3.5      2\n",
-       "4.0      2\n",
-       "4.6      2\n",
-       "5.3      2\n",
-       "6.0      2\n",
-       "4.7      2\n",
-       "3.2      2\n",
-       "3.8      2\n",
        "5.6      2\n",
-       "10.7     1\n",
+       "5.3      2\n",
+       "3.2      2\n",
+       "4.0      2\n",
+       "3.5      2\n",
+       "4.7      2\n",
+       "3.8      2\n",
+       "4.6      2\n",
+       "6.0      2\n",
        "1.6      1\n",
-       "3.0      1\n",
        "2.6      1\n",
-       "6.5      1\n",
-       "19.0     1\n",
-       "4.8      1\n",
-       "5.9      1\n",
-       "12.4     1\n",
-       "1.8      1\n",
-       "15.3     1\n",
-       "12.5     1\n",
-       "7.5      1\n",
-       "5.2      1\n",
-       "6.8      1\n",
-       "3.5 e    1\n",
-       "6.2      1\n",
-       "3.2 e    1\n",
-       "10.8     1\n",
-       "3.6      1\n",
        "2.8 e    1\n",
+       "4.8      1\n",
+       "3.0      1\n",
+       "19.0     1\n",
+       "3.5 e    1\n",
+       "6.5      1\n",
+       "12.4     1\n",
+       "5.9      1\n",
+       "15.3     1\n",
+       "4.9      1\n",
+       "14.5     1\n",
+       "7.5      1\n",
+       "2.3      1\n",
+       "3.2 e    1\n",
+       "5.2      1\n",
+       "3.6      1\n",
+       "10.8     1\n",
+       "6.2      1\n",
        "2.1      1\n",
        "4.5      1\n",
-       "14.5     1\n",
-       "2.3      1\n",
-       "4.9      1\n",
+       "10.7     1\n",
+       "6.8      1\n",
+       "1.8      1\n",
+       "12.5     1\n",
        "Name: 2020M01, dtype: int64"
       ]
      },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "4      6.0      5.6      5.9      7.3      7.3      6.1      5.3      NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,11 +904,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "harmonized25_74_copy.to_csv('teilm022_cleaned.csv', index = False)"
+    "harmonized25_74_copy.to_csv('../data/cleaned/teilm022_cleaned.csv', index = False)"
    ]
   }
  ],
