fixing error in pkl output

--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
     "def simplify_col(col):\n",
     "    \"\"\"Return column as series with dtype float.\"\"\"\n",
     "    \n",
-    "    if df[\"2019M09 \"].dtype == \"float64\":\n",
-    "        return df\n",
+    "    if col.dtype == \"float64\":\n",
+    "        return col\n",
     "    \n",
     "    def _split_str(x):\n",
     "        \"\"\"Split string on space and return numbers.\"\"\"\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,24 +90,27 @@
     "    \n",
     "    # Convert variables in first column to seperate columns\n",
     "    df = split_first_col(df) \n",
+    "    \n",
+    "    filename = filename.split(\".\")[0]\n",
     "    df.to_pickle(os.path.join(BASE, \"pickles\", f\"{filename}.pkl\"))\n",
+    "    df.to_csv(os.path.join(BASE, \"pickles\", f\"{filename}.csv\"))\n",
     "    \n",
     "    return filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "teilm021.tsv\n",
-      "teilm022.tsv\n",
-      "tepsr_wc120.tsv\n",
-      "tps00203.tsv\n"
+      "teilm021\n",
+      "teilm022\n",
+      "tepsr_wc120\n",
+      "tps00203\n"
      ]
     }
    ],
