create more pickles

--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "def simplify_col(col):\n",
     "    \"\"\"Return column as series with dtype float.\"\"\"\n",
     "    \n",
-    "    if col.dtype == \"float64\":\n",
+    "    # Skip if already numeric\n",
+    "    if col.dtype in [\"float64\", \"int64\"]:\n",
     "        return col\n",
     "    \n",
     "    def _split_str(x):\n",
@@ -75,12 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_df(filename):\n",
+    "def clean_df(filename, replace=True):\n",
     "    \"\"\"Take filename, create & clean df and save as pickel.\"\"\"\n",
+    "    \n",
+    "    # Skip file it exists and if flag set to false\n",
+    "    newname = filename.split(\".\")[0]\n",
+    "    if (not replace \n",
+    "        and os.path.exists(os.path.join(BASE, \"pickles\", f\"{newname}.pkl\"))):\n",
+    "        return f\"{filename} skipped\"\n",
     "    \n",
     "    df = pd.read_csv(os.path.join(BASE, \"tsv\", filename), sep=\"\\t\")\n",
     "    \n",
@@ -91,26 +98,45 @@
     "    # Convert variables in first column to seperate columns\n",
     "    df = split_first_col(df) \n",
     "    \n",
-    "    filename = filename.split(\".\")[0]\n",
-    "    df.to_pickle(os.path.join(BASE, \"pickles\", f\"{filename}.pkl\"))\n",
-    "    df.to_csv(os.path.join(BASE, \"pickles\", f\"{filename}.csv\"))\n",
+    "    df.to_pickle(os.path.join(BASE, \"pickles\", f\"{newname}.pkl\"))\n",
+    "    df.to_csv(os.path.join(BASE, \"pickles\", f\"{newname}.csv\"))\n",
     "    \n",
     "    return filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "teilm021\n",
-      "teilm022\n",
-      "tepsr_wc120\n",
-      "tps00203\n"
+      "lfsa_pganws.tsv skipped\n",
+      "lfsq_pganws.tsv skipped\n",
+      "sdg_08_40.tsv skipped\n",
+      "t2020_10.tsv skipped\n",
+      "teilm010.tsv\n",
+      "teilm011.tsv\n",
+      "teilm012.tsv\n",
+      "teilm020.tsv\n",
+      "teilm021.tsv skipped\n",
+      "teilm022.tsv skipped\n",
+      "tepsr_wc120.tsv skipped\n",
+      "tgs00007.tsv\n",
+      "tgs00010.tsv\n",
+      "tgs00053.tsv\n",
+      "tgs00102.tsv\n",
+      "tps00066.tsv\n",
+      "tps00070.tsv\n",
+      "tps00071.tsv\n",
+      "tps00073.tsv\n",
+      "tps00074.tsv\n",
+      "tps00159.tsv\n",
+      "tps00181.tsv\n",
+      "tps00182.tsv\n",
+      "tps00203.tsv skipped\n"
      ]
     }
    ],
@@ -120,7 +146,7 @@
     "files = list_tsv()\n",
     "\n",
     "for filename in files:\n",
-    "    print(clean_df(filename))"
+    "    print(clean_df(filename, replace=False))"
    ]
   },
   {
