--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -11,8 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(\"../data/pickles/teilm010.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -58,304 +69,179 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
+       "      <td>TOTAL</td>\n",
        "      <td>F</td>\n",
-       "      <td>PC_ACT</td>\n",
+       "      <td>THS_PER</td>\n",
        "      <td>AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,AT</td>\n",
+       "      <td>88</td>\n",
+       "      <td>89</td>\n",
+       "      <td>88</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
+       "      <td>TOTAL</td>\n",
        "      <td>F</td>\n",
-       "      <td>PC_ACT</td>\n",
+       "      <td>THS_PER</td>\n",
        "      <td>BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BE</td>\n",
+       "      <td>117</td>\n",
+       "      <td>113</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>115</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
+       "      <td>TOTAL</td>\n",
        "      <td>F</td>\n",
-       "      <td>PC_ACT</td>\n",
+       "      <td>THS_PER</td>\n",
        "      <td>BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,BG</td>\n",
+       "      <td>56</td>\n",
+       "      <td>58</td>\n",
+       "      <td>58</td>\n",
+       "      <td>57</td>\n",
+       "      <td>61</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
+       "      <td>TOTAL</td>\n",
        "      <td>F</td>\n",
-       "      <td>PC_ACT</td>\n",
+       "      <td>THS_PER</td>\n",
        "      <td>CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CH</td>\n",
+       "      <td>106</td>\n",
+       "      <td>100</td>\n",
+       "      <td>97</td>\n",
+       "      <td>98</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
+       "      <td>TOTAL</td>\n",
        "      <td>F</td>\n",
-       "      <td>PC_ACT</td>\n",
+       "      <td>THS_PER</td>\n",
        "      <td>CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "      <td>SA,Y25-74,F,PC_ACT,CY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
-       "      <td>T</td>\n",
-       "      <td>PC_ACT</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,SK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
-       "      <td>T</td>\n",
-       "      <td>PC_ACT</td>\n",
-       "      <td>SK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,TR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
-       "      <td>T</td>\n",
-       "      <td>PC_ACT</td>\n",
-       "      <td>TR</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,UK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
-       "      <td>T</td>\n",
-       "      <td>PC_ACT</td>\n",
-       "      <td>UK</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "      <td>SA,Y25-74,T,PC_ACT,US</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>SA</td>\n",
-       "      <td>Y_LT25</td>\n",
-       "      <td>T</td>\n",
-       "      <td>PC_ACT</td>\n",
-       "      <td>US</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>116 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    s_adj     age sex    unit geo                2019m09  \\\n",
-       "0      SA  Y_LT25   F  PC_ACT  AT  SA,Y25-74,F,PC_ACT,AT   \n",
-       "1      SA  Y_LT25   F  PC_ACT  BE  SA,Y25-74,F,PC_ACT,BE   \n",
-       "2      SA  Y_LT25   F  PC_ACT  BG  SA,Y25-74,F,PC_ACT,BG   \n",
-       "3      SA  Y_LT25   F  PC_ACT  CH  SA,Y25-74,F,PC_ACT,CH   \n",
-       "4      SA  Y_LT25   F  PC_ACT  CY  SA,Y25-74,F,PC_ACT,CY   \n",
-       "..    ...     ...  ..     ...  ..                    ...   \n",
-       "111    SA  Y_LT25   T  PC_ACT  SI  SA,Y25-74,T,PC_ACT,SK   \n",
-       "112    SA  Y_LT25   T  PC_ACT  SK  SA,Y25-74,T,PC_ACT,TR   \n",
-       "113    SA  Y_LT25   T  PC_ACT  TR  SA,Y25-74,T,PC_ACT,UK   \n",
-       "114    SA  Y_LT25   T  PC_ACT  UK  SA,Y25-74,T,PC_ACT,US   \n",
-       "115    SA  Y_LT25   T  PC_ACT  US                    NaN   \n",
+       "  s_adj    age sex     unit geo  2019m09  2019m10  2019m11  2019m12  2020m01  \\\n",
+       "0    SA  TOTAL   F  THS_PER  AT       88       89       88       90       92   \n",
+       "1    SA  TOTAL   F  THS_PER  BE      117      113      110      110      115   \n",
+       "2    SA  TOTAL   F  THS_PER  BG       56       58       58       57       61   \n",
+       "3    SA  TOTAL   F  THS_PER  CH      106      100       97       98      102   \n",
+       "4    SA  TOTAL   F  THS_PER  CY       16       16       16       15       14   \n",
        "\n",
-       "                   2019m10                2019m11                2019m12  \\\n",
-       "0    SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT   \n",
-       "1    SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE   \n",
-       "2    SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG   \n",
-       "3    SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH   \n",
-       "4    SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY   \n",
-       "..                     ...                    ...                    ...   \n",
-       "111  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK   \n",
-       "112  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR   \n",
-       "113  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK   \n",
-       "114  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US   \n",
-       "115                    NaN                    NaN                    NaN   \n",
-       "\n",
-       "                   2020m01                2020m02                2020m03  \\\n",
-       "0    SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT   \n",
-       "1    SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE   \n",
-       "2    SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG   \n",
-       "3    SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH   \n",
-       "4    SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY   \n",
-       "..                     ...                    ...                    ...   \n",
-       "111  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK   \n",
-       "112  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR   \n",
-       "113  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK   \n",
-       "114  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US   \n",
-       "115                    NaN                    NaN                    NaN   \n",
-       "\n",
-       "                   2020m04                2020m05                2020m06  \\\n",
-       "0    SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT   \n",
-       "1    SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE   \n",
-       "2    SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG   \n",
-       "3    SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH   \n",
-       "4    SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY   \n",
-       "..                     ...                    ...                    ...   \n",
-       "111  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK   \n",
-       "112  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR   \n",
-       "113  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK   \n",
-       "114  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US   \n",
-       "115                    NaN                    NaN                    NaN   \n",
-       "\n",
-       "                   2020m07                2020m08  \n",
-       "0    SA,Y25-74,F,PC_ACT,AT  SA,Y25-74,F,PC_ACT,AT  \n",
-       "1    SA,Y25-74,F,PC_ACT,BE  SA,Y25-74,F,PC_ACT,BE  \n",
-       "2    SA,Y25-74,F,PC_ACT,BG  SA,Y25-74,F,PC_ACT,BG  \n",
-       "3    SA,Y25-74,F,PC_ACT,CH  SA,Y25-74,F,PC_ACT,CH  \n",
-       "4    SA,Y25-74,F,PC_ACT,CY  SA,Y25-74,F,PC_ACT,CY  \n",
-       "..                     ...                    ...  \n",
-       "111  SA,Y25-74,T,PC_ACT,SK  SA,Y25-74,T,PC_ACT,SK  \n",
-       "112  SA,Y25-74,T,PC_ACT,TR  SA,Y25-74,T,PC_ACT,TR  \n",
-       "113  SA,Y25-74,T,PC_ACT,UK  SA,Y25-74,T,PC_ACT,UK  \n",
-       "114  SA,Y25-74,T,PC_ACT,US  SA,Y25-74,T,PC_ACT,US  \n",
-       "115                    NaN                    NaN  \n",
-       "\n",
-       "[116 rows x 17 columns]"
+       "   2020m02  2020m03  2020m04  2020m05  2020m06  2020m07  2020m08  \n",
+       "0     91.0     93.0    101.0    104.0    102.0     96.0      NaN  \n",
+       "1    117.0    120.0    125.0    124.0    123.0    121.0      NaN  \n",
+       "2     59.0     59.0     72.0     68.0     64.0     64.0      NaN  \n",
+       "3    102.0    104.0    103.0    105.0    106.0      NaN      NaN  \n",
+       "4     13.0     13.0     17.0     18.0     15.0     13.0      NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_pickle(\"../data/pickles/teilm021.tsv.pkl\")"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(115, 17)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"isced11\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Y15-74'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"age\"].unique()"
    ]
   },
   {
