filter for sex/country

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -11,19 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle(\"../data/pickles/teilm010.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
@@ -69,101 +58,101 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>SA</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>Y25-74</td>\n",
        "      <td>F</td>\n",
-       "      <td>THS_PER</td>\n",
+       "      <td>PC_ACT</td>\n",
        "      <td>AT</td>\n",
-       "      <td>88</td>\n",
-       "      <td>89</td>\n",
-       "      <td>88</td>\n",
-       "      <td>90</td>\n",
-       "      <td>92</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>3.9</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SA</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>Y25-74</td>\n",
        "      <td>F</td>\n",
-       "      <td>THS_PER</td>\n",
+       "      <td>PC_ACT</td>\n",
        "      <td>BE</td>\n",
-       "      <td>117</td>\n",
-       "      <td>113</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>115</td>\n",
-       "      <td>117.0</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>123.0</td>\n",
-       "      <td>121.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.4</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SA</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>Y25-74</td>\n",
        "      <td>F</td>\n",
-       "      <td>THS_PER</td>\n",
+       "      <td>PC_ACT</td>\n",
        "      <td>BG</td>\n",
-       "      <td>56</td>\n",
-       "      <td>58</td>\n",
-       "      <td>58</td>\n",
-       "      <td>57</td>\n",
-       "      <td>61</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3.9</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SA</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>Y25-74</td>\n",
        "      <td>F</td>\n",
-       "      <td>THS_PER</td>\n",
+       "      <td>PC_ACT</td>\n",
        "      <td>CH</td>\n",
-       "      <td>106</td>\n",
-       "      <td>100</td>\n",
-       "      <td>97</td>\n",
-       "      <td>98</td>\n",
-       "      <td>102</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>106.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>SA</td>\n",
-       "      <td>TOTAL</td>\n",
+       "      <td>Y25-74</td>\n",
        "      <td>F</td>\n",
-       "      <td>THS_PER</td>\n",
+       "      <td>PC_ACT</td>\n",
        "      <td>CY</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>5.3</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -171,77 +160,401 @@
        "</div>"
       ],
       "text/plain": [
-       "  s_adj    age sex     unit geo  2019m09  2019m10  2019m11  2019m12  2020m01  \\\n",
-       "0    SA  TOTAL   F  THS_PER  AT       88       89       88       90       92   \n",
-       "1    SA  TOTAL   F  THS_PER  BE      117      113      110      110      115   \n",
-       "2    SA  TOTAL   F  THS_PER  BG       56       58       58       57       61   \n",
-       "3    SA  TOTAL   F  THS_PER  CH      106      100       97       98      102   \n",
-       "4    SA  TOTAL   F  THS_PER  CY       16       16       16       15       14   \n",
+       "  s_adj     age sex    unit geo  2019m09  2019m10  2019m11  2019m12  2020m01  \\\n",
+       "0    SA  Y25-74   F  PC_ACT  AT      3.7      3.8      3.7      3.7      3.7   \n",
+       "1    SA  Y25-74   F  PC_ACT  BE      4.3      4.1      3.9      3.9      4.1   \n",
+       "2    SA  Y25-74   F  PC_ACT  BG      3.5      3.6      3.6      3.5      3.8   \n",
+       "3    SA  Y25-74   F  PC_ACT  CH      4.0      3.8      3.6      3.7      4.0   \n",
+       "4    SA  Y25-74   F  PC_ACT  CY      7.0      6.8      6.6      6.3      6.0   \n",
        "\n",
        "   2020m02  2020m03  2020m04  2020m05  2020m06  2020m07  2020m08  \n",
-       "0     91.0     93.0    101.0    104.0    102.0     96.0      NaN  \n",
-       "1    117.0    120.0    125.0    124.0    123.0    121.0      NaN  \n",
-       "2     59.0     59.0     72.0     68.0     64.0     64.0      NaN  \n",
-       "3    102.0    104.0    103.0    105.0    106.0      NaN      NaN  \n",
-       "4     13.0     13.0     17.0     18.0     15.0     13.0      NaN  "
+       "0      3.6      3.7      4.0      4.2      4.1      3.9      NaN  \n",
+       "1      4.2      4.4      4.5      4.4      4.4      4.4      NaN  \n",
+       "2      3.6      3.6      4.2      4.0      3.9      3.9      NaN  \n",
+       "3      4.1      4.1      4.0      4.1      4.2      NaN      NaN  \n",
+       "4      5.6      5.9      7.3      7.3      6.1      5.3      NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_pickle(\"../data/pickles/teilm022.pkl\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(115, 17)"
+       "array(['F', 'M', 'T'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "params = df.iloc[0][0:4]\n",
+    "df[\"sex\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby(\"isced11\")."
+    "df = df.drop(columns=[\"s_adj\", \"age\", \"unit\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"mean\"] = df[df.columns[2:]].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>geo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AT</th>\n",
+       "      <td>3.83</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>4.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BE</th>\n",
+       "      <td>4.24</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>4.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BG</th>\n",
+       "      <td>3.75</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>4.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CH</th>\n",
+       "      <td>3.96</td>\n",
+       "      <td>3.71</td>\n",
+       "      <td>3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CY</th>\n",
+       "      <td>6.38</td>\n",
+       "      <td>5.63</td>\n",
+       "      <td>6.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CZ</th>\n",
+       "      <td>2.26</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>1.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DE</th>\n",
+       "      <td>3.16</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DK</th>\n",
+       "      <td>4.76</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>4.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EA</th>\n",
+       "      <td>7.06</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>6.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EA18</th>\n",
+       "      <td>7.07</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>6.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EA19</th>\n",
+       "      <td>7.06</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>6.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EE</th>\n",
+       "      <td>4.59</td>\n",
+       "      <td>4.77</td>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EL</th>\n",
+       "      <td>19.05</td>\n",
+       "      <td>12.74</td>\n",
+       "      <td>15.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ES</th>\n",
+       "      <td>14.91</td>\n",
+       "      <td>11.65</td>\n",
+       "      <td>13.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EU27_2007</th>\n",
+       "      <td>5.72</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EU27_2020</th>\n",
+       "      <td>6.25</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>5.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EU28</th>\n",
+       "      <td>5.72</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FI</th>\n",
+       "      <td>5.28</td>\n",
+       "      <td>5.71</td>\n",
+       "      <td>5.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FR</th>\n",
+       "      <td>6.44</td>\n",
+       "      <td>6.42</td>\n",
+       "      <td>6.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HR</th>\n",
+       "      <td>6.65</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>6.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HU</th>\n",
+       "      <td>3.43</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IE</th>\n",
+       "      <td>3.62</td>\n",
+       "      <td>4.02</td>\n",
+       "      <td>3.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IS</th>\n",
+       "      <td>3.14</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>2.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IT</th>\n",
+       "      <td>9.67</td>\n",
+       "      <td>7.45</td>\n",
+       "      <td>8.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LT</th>\n",
+       "      <td>5.67</td>\n",
+       "      <td>7.17</td>\n",
+       "      <td>6.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LU</th>\n",
+       "      <td>5.17</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>5.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LV</th>\n",
+       "      <td>5.93</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>6.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MT</th>\n",
+       "      <td>3.73</td>\n",
+       "      <td>2.78</td>\n",
+       "      <td>3.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NL</th>\n",
+       "      <td>2.68</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>2.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NO</th>\n",
+       "      <td>2.76</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>3.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PL</th>\n",
+       "      <td>2.80</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>2.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PT</th>\n",
+       "      <td>5.98</td>\n",
+       "      <td>5.34</td>\n",
+       "      <td>5.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RO</th>\n",
+       "      <td>2.96</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SE</th>\n",
+       "      <td>5.82</td>\n",
+       "      <td>5.67</td>\n",
+       "      <td>5.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SI</th>\n",
+       "      <td>4.60</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>4.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK</th>\n",
+       "      <td>5.65</td>\n",
+       "      <td>5.12</td>\n",
+       "      <td>5.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TR</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UK</th>\n",
+       "      <td>2.64</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>2.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>6.16</td>\n",
+       "      <td>5.55</td>\n",
+       "      <td>5.85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Y15-74'], dtype=object)"
+       "sex            F      M      T\n",
+       "geo                           \n",
+       "AT          3.83   4.15   4.01\n",
+       "BE          4.24   4.83   4.56\n",
+       "BG          3.75   4.25   4.03\n",
+       "CH          3.96   3.71   3.81\n",
+       "CY          6.38   5.63   6.00\n",
+       "CZ          2.26   1.75   1.98\n",
+       "DE          3.16   3.67   3.44\n",
+       "DK          4.76   3.86   4.29\n",
+       "EA          7.06   6.28   6.66\n",
+       "EA18        7.07   6.28   6.66\n",
+       "EA19        7.06   6.28   6.66\n",
+       "EE          4.59   4.77   4.70\n",
+       "EL         19.05  12.74  15.51\n",
+       "ES         14.91  11.65  13.16\n",
+       "EU27_2007   5.72   5.12   5.40\n",
+       "EU27_2020   6.25   5.59   5.90\n",
+       "EU28        5.72   5.12   5.40\n",
+       "FI          5.28   5.71   5.52\n",
+       "FR          6.44   6.42   6.40\n",
+       "HR          6.65   5.70   6.15\n",
+       "HU          3.43   3.00   3.20\n",
+       "IE          3.62   4.02   3.85\n",
+       "IS          3.14   2.71   2.91\n",
+       "IT          9.67   7.45   8.43\n",
+       "LT          5.67   7.17   6.44\n",
+       "LU          5.17   5.14   5.16\n",
+       "LV          5.93   7.75   6.83\n",
+       "MT          3.73   2.78   3.15\n",
+       "NL          2.68   2.65   2.66\n",
+       "NO          2.76   3.28   3.03\n",
+       "PL          2.80   2.48   2.62\n",
+       "PT          5.98   5.34   5.65\n",
+       "RO          2.96   3.97   3.53\n",
+       "SE          5.82   5.67   5.73\n",
+       "SI          4.60   3.52   4.03\n",
+       "SK          5.65   5.12   5.35\n",
+       "TR           NaN    NaN  11.20\n",
+       "UK          2.64   2.74   2.69\n",
+       "US          6.16   5.55   5.85"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"age\"].unique()"
+    "df = (df\n",
+    "     .drop(columns=t.columns[2:-1])\n",
+    "     .pivot(index=\"geo\", columns=\"sex\", values=\"mean\")\n",
+    "     .round(2))\n",
+    "df"
    ]
   },
   {
