--- a/notebooks/Convert_tsv_to_pkl.ipynb
+++ b/notebooks/Convert_tsv_to_pkl.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,36 +106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lfsa_pganws.tsv skipped\n",
-      "lfsq_pganws.tsv skipped\n",
+      "lfsq_egan.tsv skipped\n",
       "sdg_08_40.tsv skipped\n",
       "t2020_10.tsv skipped\n",
-      "teilm010.tsv\n",
-      "teilm011.tsv\n",
-      "teilm012.tsv\n",
-      "teilm020.tsv\n",
+      "tec00114.tsv\n",
+      "teilm010.tsv skipped\n",
+      "teilm011.tsv skipped\n",
+      "teilm012.tsv skipped\n",
+      "teilm020.tsv skipped\n",
       "teilm021.tsv skipped\n",
       "teilm022.tsv skipped\n",
       "tepsr_wc120.tsv skipped\n",
-      "tgs00007.tsv\n",
-      "tgs00010.tsv\n",
-      "tgs00053.tsv\n",
-      "tgs00102.tsv\n",
-      "tps00066.tsv\n",
-      "tps00070.tsv\n",
-      "tps00071.tsv\n",
-      "tps00073.tsv\n",
-      "tps00074.tsv\n",
-      "tps00159.tsv\n",
-      "tps00181.tsv\n",
-      "tps00182.tsv\n",
+      "tgs00007.tsv skipped\n",
+      "tgs00010.tsv skipped\n",
+      "tgs00053.tsv skipped\n",
+      "tgs00102.tsv skipped\n",
+      "tps00066.tsv skipped\n",
+      "tps00070.tsv skipped\n",
+      "tps00071.tsv skipped\n",
+      "tps00073.tsv skipped\n",
+      "tps00074.tsv skipped\n",
+      "tps00159.tsv skipped\n",
+      "tps00181.tsv skipped\n",
+      "tps00182.tsv skipped\n",
       "tps00203.tsv skipped\n"
      ]
     }
