--- a/notebooks/filter_for_sex.ipynb
+++ b/notebooks/filter_for_sex.ipynb
@@ -1098,6 +1098,10 @@
    "outputs": [],
    "source": [
     "# Calculate fractions\n",
+    "\n",
+    "\"\"\" NOTE: The fraction of the total unemployed is not completely \n",
+    "clear since the size of female vs male population might differ \"\"\"\n",
+    "\n",
     "abs_df[\"frac_f\"] = round(abs_df[\"F\"] / abs_df[\"T\"], 4) * 100\n",
     "abs_df[\"frac_m\"] = round(abs_df[\"M\"] / abs_df[\"T\"], 4) * 100"
    ]
@@ -1581,12 +1585,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export\n",
-    "df.to_pickle(os.path.join(BASE, \"analysis\", \"filterd_sex_country.pkl\"))"
+    "df.to_pickle(os.path.join(BASE, \"output\", \"filtered_sex_country.pkl\"))"
    ]
   },
   {
